Added a route that returns all usernames
